Day 1: SSIS Setup done

--- a/ITASWeeklyHours/ITASWeeklyHours.csproj
+++ b/ITASWeeklyHours/ITASWeeklyHours.csproj
@@ -266,6 +266,12 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ExecuteSSISPackage\ExecuteSSISPackage.csproj">
+      <Project>{364d1452-8693-4632-828d-a78f7ac94b1f}</Project>
+      <Name>ExecuteSSISPackage</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
